# TWIST

./: .gitignore  CLAUDE.md  CORE.md  README.md  cholec80_data_prep.py  cotracker_tracks_prep.py  ct3kubric_data_prep.py  dynamicreplica_data_prep.py  endotapp_gt_prep.py  evaluate.py  main.py  pointodyssey_data_prep.py  pyproject.toml  robotap_data_prep.py  surgicalmotion_data_prep.py  sweep_agent.py  tapvid_data_prep.py  train.py  vlsurgpt_data_prep.py
.claude/skills/: wandb-summarize.md
benchmark/: INTEGRATION_NOTES.md  README.md  SETUP_TRACKERS.md  benchmark_cotracker_a40.sbatch  common.py  cotracker.py  cotracker.yaml
benchmark/chrono/: benchmark_chrono_a40.sbatch  chrono.py  chrono.yaml
benchmark/cotracker/: benchmark_cotracker_a40.sbatch  cotracker.py  cotracker.yaml
benchmark/litetracker/: benchmark_litetracker_a40.sbatch  litetracker.py  litetracker.yaml
config/: ablation_ce.yaml  ablation_coarse.yaml  ablation_redetect.yaml  exp_ctrl.yaml  exp_rollout.yaml  pretrain.yaml  schedule.yaml  smoke.yaml  surg_finetune.yaml  sweep.yaml  sweep_ablations.yaml  sweep_resolution.yaml  sweep_supervision.yaml  train.yaml  train_best.yaml  train_pretrain.yaml  train_r512_dynrep.yaml  train_surg_finetune.yaml  train_surgical_fine-tuning.yaml  train_v2.yaml  train_v3.yaml
dataprep/: cholecprep.sbatch  endotappprep.sbatch  pointodysseyprep.sbatch  surgtprep.sbatch
dataset/: __init__.py  base.py  collate.py  cotracker.py  pseudo_gt.py  sampling.py  splits.py  wrappers.py
from_claude_desktop/: project_outline_summary.md  surgical_tap_filter_sketch.py
geometry/: __init__.py  pipeline.py  projections.py  transforms.py
models/: __init__.py  encoder.py  losses.py  metrics.py  world_model.py
spark/: README.md  pack_for_spark.sh  seed_from_pretrain.sh
utilities/: __init__.py  config.py  engine.py  env.py  evaluation.py  log.py  runs.py  visualization.py  wandb_analyzer.py
(+37 files in other folders)
