[project]
name = "v120bb18-twist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotmap>=1.3.30",
    "flow-vis>=0.1",
    "ground-control-tui>=1.3.2",
    "imageio[ffmpeg]>=2.37.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "tensorboard>=2.20.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "wandb[media]>=0.26.1",
]
